--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.9.0",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0"
   }
 }
